What to expect from smol 2.0
Signed-off-by: John Nunley <dev@notgull.net>

--- a/_posts/2023-08-04-theo.md
+++ b/_posts/2023-08-04-theo.md
@@ -35,6 +35,7 @@ There are some other minor differences, but overall once [`vello`] is actually r
 While building [`theo`], I had to write a handful of other crates to make the current Rust rendering ecosystem easier to work with. Here's a quick rundown of them:
 
 - [`line-straddler`], which generates underlines and strikethroughs for glyphs.
+- [`piet-cosmic-text`], which provides a uniform text rendering interface for [`piet`] using [`cosmic-text`].
 - [`piet-tiny-skia`], which implements a [`piet`] backend using [`tiny-skia`].
 - [`piet-hardware`], which converts [`piet`] rendering calls to buffering textured triangles.
 - [`piet-glow`], which implements a [`piet`] backend using OpenGL.
@@ -55,3 +56,5 @@ While building [`theo`], I had to write a handful of other crates to make the cu
 [`tiny-skia`]: https://crates.io/crates/tiny-skia
 [`softbuffer`]: https://crates.io/crates/softbuffer
 [`vello`]: https://github.com/linebender/vello
+[`piet-cosmic-text`]: https://crates.io/crates/piet-cosmic-text
+[`cosmic-text`]: https://crates.io/crates/cosmic-text
